--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
   },
   "homepage": "https://github.com/township/township-accounts#readme",
   "dependencies": {
-    "township-access": "^2.0.0",
-    "township-auth": "^2.0.5",
-    "township-token": "^2.2.0",
+    "semlocks": "^1.3.0",
+    "township-access": "github:township/township-access",
+    "township-auth": "github:township/township-auth",
+    "township-token": "github:township/township-token",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
-    "documentation": "^4.0.0-beta16",
+    "documentation": "^9.1.1",
     "memdb": "^1.3.1",
-    "standard": "^8.6.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.3"
+    "standard": "^12.0.1",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.2"
   }
 }
